fixed scroll [commented  html,body {                           /*overflow: auto; !* Change from "hidden" to "auto" *!*/                         }]

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -9,29 +9,27 @@
   width: 100%;
 }
  html,body {
-  overflow: auto; /* Change from "hidden" to "auto" */
+  /*overflow: auto; !* Change from "hidden" to "auto" *!*/
 }
  body{
   min-height: 100vh;
 }
 
-.svg-blob{
+  .svg-blob{
   position: absolute;
   bottom: 0;
   top: 0;
   left: 0;
   z-index: -1;
 }
-
-.img-bg {
+  .img-bg {
   position: relative;
 }
-
   .nav__links {
   list-style: none;
 
 }
-  header {
+   header {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -52,8 +50,6 @@
   pointer-events: none; /* Disable pointer interactions */
   user-select: none;
 }
-
-
 
 @keyframes imageTransition {
   0% {
@@ -146,6 +142,7 @@
   /*display: none;*/
 
 }
+
 nav.active{
   right: 0;
 }
